--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -1311,8 +1311,8 @@
 
 	body {
 		background-color: #183026;
-		background-image: url("images/overlay.png"), url("../../images/bgf.jpg");
-		background-repeat: repeat, no-repeat;
+		background-image:url("../../images/bgf.jpeg");
+		background-repeat: no-repeat;
 		background-size: auto, cover;
 		background-position: top left, center 0;
 		background-attachment: fixed, fixed;
